--- a/src/main/resources/group16/smartflightcheckinkiosk/MealChoose.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/MealChoose.fxml
@@ -1,14 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="group16.smartflightcheckinkiosk.MealChoose"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17">
+  <tabs>
+    <Tab text="Meal1">
+      <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <BorderPane prefHeight="366.0" prefWidth="594.0">
+                     <bottom>
+                        <Button mnemonicParsing="false" text="order" BorderPane.alignment="CENTER" />
+                     </bottom>
+                     <top>
+                        <Label text="Meal1 多少钱" BorderPane.alignment="CENTER" />
+                     </top>
+                     <center>
+                        <Label text="这里放张图" BorderPane.alignment="CENTER" />
+                     </center>
+                  </BorderPane>
+               </children></AnchorPane>
+      </content>
+    </Tab>
+      <Tab text="Meal2">
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <BorderPane prefHeight="366.0" prefWidth="594.0">
+                     <bottom>
+                        <Button mnemonicParsing="false" text="order" BorderPane.alignment="CENTER" />
+                     </bottom>
+                     <top>
+                        <Label text="Meal2 多少钱" BorderPane.alignment="CENTER" />
+                     </top>
+                     <center>
+                        <Label text="这里放张图" BorderPane.alignment="CENTER" />
+                     </center>
+                  </BorderPane>
+               </children>
+            </AnchorPane>
+         </content>
+      </Tab>
+      <Tab text="Meal3">
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <BorderPane prefHeight="366.0" prefWidth="594.0">
+                     <bottom>
+                        <Button mnemonicParsing="false" text="order" BorderPane.alignment="CENTER" />
+                     </bottom>
+                     <top>
+                        <Label text="Meal3 多少钱" BorderPane.alignment="CENTER" />
+                     </top>
+                     <center>
+                        <Label text="这里放张图" BorderPane.alignment="CENTER" />
+                     </center>
+                  </BorderPane>
+               </children>
+            </AnchorPane>
+         </content>
+      </Tab>
+  </tabs>
+</TabPane>
