--- a/src/main/resources/group16/smartflightcheckinkiosk/IDdoc.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/IDdoc.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="way3" prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.IDdocController">
+<AnchorPane fx:id="way3" prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.IDdocController">
    <children>
       <Label fx:id="confirm4" layoutX="61.0" layoutY="33.0" prefHeight="22.0" prefWidth="178.0" text="Please Scan Your ID Document" />
       <TextField fx:id="id_docField" layoutX="69.0" layoutY="73.0" prefHeight="54.0" prefWidth="160.0" />
