--- a/src/main/resources/group16/smartflightcheckinkiosk/MealChoose.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/MealChoose.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.MealChooseController">
   <tabs>
     <Tab text="Meal1">
       <content>
@@ -15,13 +15,13 @@
                <children>
                   <BorderPane prefHeight="366.0" prefWidth="594.0">
                      <bottom>
-                        <Button mnemonicParsing="false" text="order" BorderPane.alignment="CENTER" />
+                        <Button fx:id="OrderMeal1" mnemonicParsing="false" onMouseClicked="#ChooseMeal1" text="order" BorderPane.alignment="CENTER" />
                      </bottom>
                      <top>
-                        <Label text="Meal1 多少钱" BorderPane.alignment="CENTER" />
+                        <Label fx:id="LabelMeal1" text="Meal1 多少钱" BorderPane.alignment="CENTER" />
                      </top>
                      <center>
-                        <Label text="这里放张图" BorderPane.alignment="CENTER" />
+                        <Label fx:id="LabelMealPic1" text="这里放张图" BorderPane.alignment="CENTER" />
                      </center>
                   </BorderPane>
                </children></AnchorPane>
@@ -33,13 +33,13 @@
                <children>
                   <BorderPane prefHeight="366.0" prefWidth="594.0">
                      <bottom>
-                        <Button mnemonicParsing="false" text="order" BorderPane.alignment="CENTER" />
+                        <Button fx:id="OrderMeal2" mnemonicParsing="false" text="order" onMouseClicked="#ChooseMeal2" BorderPane.alignment="CENTER" />
                      </bottom>
                      <top>
-                        <Label text="Meal2 多少钱" BorderPane.alignment="CENTER" />
+                        <Label fx:id="LabelMeal2" text="Meal2 多少钱" BorderPane.alignment="CENTER" />
                      </top>
                      <center>
-                        <Label text="这里放张图" BorderPane.alignment="CENTER" />
+                        <Label fx:id="LabelMealPic2" text="这里放张图" BorderPane.alignment="CENTER" />
                      </center>
                   </BorderPane>
                </children>
@@ -52,13 +52,13 @@
                <children>
                   <BorderPane prefHeight="366.0" prefWidth="594.0">
                      <bottom>
-                        <Button mnemonicParsing="false" text="order" BorderPane.alignment="CENTER" />
+                        <Button fx:id="OrderMeal3" mnemonicParsing="false" onAction="#ChooseMeal3" text="order" BorderPane.alignment="CENTER" />
                      </bottom>
                      <top>
-                        <Label text="Meal3 多少钱" BorderPane.alignment="CENTER" />
+                        <Label fx:id="LabelMeal3" text="Meal3 多少钱" BorderPane.alignment="CENTER" />
                      </top>
                      <center>
-                        <Label text="这里放张图" BorderPane.alignment="CENTER" />
+                        <Label fx:id="LabelMealPic3" text="这里放张图" BorderPane.alignment="CENTER" />
                      </center>
                   </BorderPane>
                </children>
