--- a/src/main/resources/group16/smartflightcheckinkiosk/boardingpass-ticket.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/boardingpass-ticket.fxml
@@ -15,7 +15,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="group16.smartflightcheckinkiosk.BoardingpassTicketController"
+            fx:controller="group16.smartflightcheckinkiosk.Controller.BoardingpassTicketController"
             prefHeight="200.0" prefWidth="400.0">
     <children>
         <FlowPane prefHeight="200.0" prefWidth="400.0">
