--- a/src/main/resources/group16/smartflightcheckinkiosk/choose-login.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/choose-login.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.ChooseLoginController">
+<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.ChooseLoginController">
    <children>
       <FlowPane prefHeight="400.0" prefWidth="400.0">
          <children>
