--- a/src/main/resources/group16/smartflightcheckinkiosk/hello-view.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/hello-view.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.*?>
 
 <?import javafx.scene.control.Button?>
-<GridPane fx:controller="group16.smartflightcheckinkiosk.HelloController"
+<GridPane fx:controller="group16.smartflightcheckinkiosk.Controller.HelloController"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
     <padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
     <Text text="Welcome"
