--- a/src/main/resources/group16/smartflightcheckinkiosk/BookNum.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/BookNum.fxml
@@ -9,6 +9,7 @@
    <children>
       <Label fx:id="confirm2" alignment="CENTER" contentDisplay="CENTER" layoutX="49.0" layoutY="27.0" prefHeight="23.0" prefWidth="209.0" text="Please Input Your Booking Number" textAlignment="CENTER" />
       <TextField fx:id="booknumField" alignment="CENTER" layoutX="74.0" layoutY="61.0" />
-      <Button fx:id="ok" alignment="CENTER" contentDisplay="CENTER" layoutX="125.0" layoutY="105.0" mnemonicParsing="false" onAction="#ok" prefHeight="26.0" prefWidth="58.0" text="OK" />
+      <Button fx:id="ok" alignment="CENTER" contentDisplay="CENTER" layoutX="177.0" layoutY="100.0" mnemonicParsing="false" onAction="#ok" prefHeight="26.0" prefWidth="58.0" text="OK" />
+      <Button fx:id="back" alignment="CENTER" contentDisplay="CENTER" layoutX="74.0" layoutY="100.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="58.0" text="BACK" />
    </children>
 </AnchorPane>
