--- a/src/main/resources/group16/smartflightcheckinkiosk/IDdoc.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/IDdoc.fxml
@@ -9,6 +9,7 @@
    <children>
       <Label fx:id="confirm4" layoutX="61.0" layoutY="33.0" prefHeight="22.0" prefWidth="178.0" text="Please Scan Your ID Document" />
       <TextField fx:id="id_docField" layoutX="69.0" layoutY="73.0" prefHeight="54.0" prefWidth="160.0" />
-      <Button fx:id="ok" layoutX="122.0" layoutY="146.0" mnemonicParsing="false" onAction="#ok" prefHeight="26.0" prefWidth="55.0" text="OK" />
+      <Button fx:id="ok" layoutX="183.0" layoutY="146.0" mnemonicParsing="false" onAction="#ok" prefHeight="26.0" prefWidth="55.0" text="OK" />
+      <Button fx:id="back" layoutX="61.0" layoutY="146.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="55.0" text="BACK" />
    </children>
 </AnchorPane>
