--- a/src/main/resources/group16/smartflightcheckinkiosk/Surname.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/Surname.fxml
@@ -12,6 +12,7 @@
       <Label fx:id="id_num" layoutX="31.0" layoutY="114.0" prefHeight="18.0" prefWidth="72.0" text="ID Number:" />
       <TextField fx:id="surnameField" layoutX="108.0" layoutY="67.0" />
       <TextField fx:id="id_numField" layoutX="108.0" layoutY="112.0" />
-      <Button fx:id="ok" layoutX="124.0" layoutY="158.0" mnemonicParsing="false" onAction="#ok" prefHeight="26.0" prefWidth="52.0" text="OK" />
+      <Button fx:id="ok" layoutX="189.0" layoutY="159.0" mnemonicParsing="false" onAction="#ok" prefHeight="26.0" prefWidth="52.0" text="OK" />
+      <Button fx:id="back" layoutX="59.0" layoutY="159.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="52.0" text="BACK" />
    </children>
 </AnchorPane>
