--- a/src/main/resources/group16/smartflightcheckinkiosk/SeatChoose.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/SeatChoose.fxml
@@ -2,13 +2,14 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.SeatChooseController">
+<ScrollPane   maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.SeatChooseController">
     <content>
         <BorderPane prefHeight="791.0" prefWidth="585.0">
             <left>
@@ -57,6 +58,14 @@
                     </children>
                 </GridPane>
             </right>
+         <bottom>
+            <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+              <buttons>
+                <Button fx:id="Back" mnemonicParsing="false" text="Back" />
+                  <Button fx:id="Next" mnemonicParsing="false" text="Next" onAction="#gotoMealChoose"/>
+              </buttons>
+            </ButtonBar>
+         </bottom>
         </BorderPane>
     </content>
 </ScrollPane>
