--- a/src/main/resources/group16/smartflightcheckinkiosk/SeatChoose.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/SeatChoose.fxml
@@ -9,7 +9,8 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<ScrollPane   maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.SeatChooseController">
+
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.SeatChooseController">
     <content>
         <BorderPane prefHeight="791.0" prefWidth="585.0">
             <left>
@@ -24,12 +25,12 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <Button fx:id="A1" mnemonicParsing="false" text="Button" />
-                        <Button fx:id="B1" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" />
-                        <Button fx:id="A2" mnemonicParsing="false" text="Button" GridPane.rowIndex="1" />
-                        <Button fx:id="B2" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Button fx:id="A3" mnemonicParsing="false" text="Button" GridPane.rowIndex="2" />
-                        <Button fx:id="B3" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <Button fx:id="A1" mnemonicParsing="false" text="Button" onAction="#ButtonClicked"  />
+                        <Button fx:id="B1" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" onAction="#ButtonClicked"/>
+                        <Button fx:id="A2" mnemonicParsing="false" text="Button" GridPane.rowIndex="1" onAction="#ButtonClicked" />
+                        <Button fx:id="B2" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="1" onAction="#ButtonClicked"/>
+                        <Button fx:id="A3" mnemonicParsing="false" text="Button" GridPane.rowIndex="2" onAction="#ButtonClicked" />
+                        <Button fx:id="B3" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" onAction="#ButtonClicked" GridPane.rowIndex="2">
                             <GridPane.margin>
                                 <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
                             </GridPane.margin>
@@ -49,12 +50,12 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <Button fx:id="C1" mnemonicParsing="false" text="Button" />
-                        <Button fx:id="D1" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" />
-                        <Button fx:id="C2" mnemonicParsing="false" text="Button" GridPane.rowIndex="1" />
-                        <Button fx:id="D2" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Button fx:id="C3" mnemonicParsing="false" text="Button" GridPane.rowIndex="2" />
-                        <Button fx:id="D3" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Button fx:id="C1" mnemonicParsing="false" text="Button" onAction="#ButtonClicked"/>
+                        <Button fx:id="D1" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" onAction="#ButtonClicked"/>
+                        <Button fx:id="C2" mnemonicParsing="false" text="Button" GridPane.rowIndex="1" onAction="#ButtonClicked"/>
+                        <Button fx:id="D2" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="1" onAction="#ButtonClicked"/>
+                        <Button fx:id="C3" mnemonicParsing="false" text="Button" GridPane.rowIndex="2" onAction="#ButtonClicked"/>
+                        <Button fx:id="D3" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="2" onAction="#ButtonClicked"/>
                     </children>
                 </GridPane>
             </right>
