--- a/src/main/resources/group16/smartflightcheckinkiosk/CheckFlight.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/CheckFlight.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.effect.*?>
 <?import javafx.scene.text.*?>
@@ -8,56 +9,88 @@
 <?import javafx.scene.layout.*?>
 
 <VBox fx:id="CheckFlight" prefHeight="220.0" prefWidth="330.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.CheckFlightController">
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="10.0" prefWidth="600.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="290.0" minWidth="0.0" prefWidth="0.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints maxHeight="185.0" minHeight="10.0" prefHeight="93.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="185.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="242.0" minHeight="0.0" prefHeight="53.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="242.0" minHeight="0.0" prefHeight="53.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="242.0" minHeight="0.0" prefHeight="51.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="300.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="251.0" minHeight="10.0" prefHeight="106.0" vgrow="SOMETIMES" />
-  </rowConstraints>
    <children>
-      <Button fx:id="b5" onAction="#gotoEnterFlight" mnemonicParsing="false" text="Go back" GridPane.halignment="LEFT" GridPane.rowIndex="6">
-         <GridPane.margin>
-            <Insets left="100.0" />
-         </GridPane.margin>
-      </Button>
-      <Button fx:id="b6" onAction="#gotoFlightList" mnemonicParsing="false" text="  Next  " GridPane.halignment="RIGHT" GridPane.rowIndex="6" GridPane.valignment="CENTER">
-         <GridPane.margin>
-            <Insets right="100.0" />
-         </GridPane.margin>
-      </Button>
-      <Label alignment="TOP_LEFT" contentDisplay="TOP" text="Are you sure?">
-         <GridPane.margin>
-            <Insets left="50.0" />
-         </GridPane.margin>
-      </Label>
-      <Label text="Flight number:" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets left="50.0" />
-         </GridPane.margin>
-      </Label>
-      <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="Data:" GridPane.rowIndex="2">
-         <GridPane.margin>
-            <Insets left="50.0" />
-         </GridPane.margin>
-      </Label>
-      <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="Time:" GridPane.rowIndex="3">
-         <GridPane.margin>
-            <Insets left="50.0" />
-         </GridPane.margin>
-      </Label>
-      <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="Place:" GridPane.rowIndex="4">
-         <GridPane.margin>
-            <Insets left="50.0" />
-         </GridPane.margin>
-      </Label>
+   <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+     <columnConstraints>
+       <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="10.0" prefWidth="600.0" />
+       <ColumnConstraints hgrow="SOMETIMES" maxWidth="290.0" minWidth="0.0" prefWidth="0.0" />
+     </columnConstraints>
+     <rowConstraints>
+       <RowConstraints maxHeight="185.0" minHeight="10.0" prefHeight="93.0" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="185.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
+       <RowConstraints maxHeight="242.0" minHeight="0.0" prefHeight="53.0" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="242.0" minHeight="0.0" prefHeight="53.0" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="242.0" minHeight="0.0" prefHeight="51.0" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="300.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="251.0" minHeight="10.0" prefHeight="106.0" vgrow="SOMETIMES" />
+     </rowConstraints>
+      <children>
+         <Button fx:id="b5" mnemonicParsing="false" onAction="#gotoEnterFlight" text="Go back" GridPane.halignment="LEFT" GridPane.rowIndex="6">
+            <GridPane.margin>
+               <Insets left="100.0" />
+            </GridPane.margin>
+         </Button>
+         <Button fx:id="b6" mnemonicParsing="false" onAction="#gotoFlightList" text="  Next  " GridPane.halignment="RIGHT" GridPane.rowIndex="6" GridPane.valignment="CENTER">
+            <GridPane.margin>
+               <Insets right="100.0" />
+            </GridPane.margin>
+         </Button>
+         <Label alignment="TOP_LEFT" contentDisplay="TOP" text="Please confirm the flight you are looking for!">
+            <GridPane.margin>
+               <Insets left="50.0" />
+            </GridPane.margin>
+         </Label>
+         <Label text="FLIGHT:" GridPane.rowIndex="1">
+            <GridPane.margin>
+               <Insets left="50.0" />
+            </GridPane.margin>
+         </Label>
+         <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="DATE:" GridPane.rowIndex="2">
+            <GridPane.margin>
+               <Insets left="50.0" />
+            </GridPane.margin>
+         </Label>
+         <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="BOARDING:" GridPane.rowIndex="3">
+            <GridPane.margin>
+               <Insets left="50.0" />
+            </GridPane.margin>
+         </Label>
+         <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="ROUTE:" GridPane.rowIndex="4">
+            <GridPane.margin>
+               <Insets left="50.0" />
+            </GridPane.margin>
+         </Label>
+            <Text fill="BLUE" strokeType="OUTSIDE" strokeWidth="0.0" text="String FlightNumber" wrappingWidth="300.0" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="160.0" />
+               </GridPane.margin>
+            </Text>
+            <Text fill="BLUE" layoutX="1400.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String Date " GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="160.0" />
+               </GridPane.margin>
+            </Text>
+            <Text fill="BLUE" strokeType="OUTSIDE" strokeWidth="0.0" text="String BoardingTime" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="220.0" />
+               </GridPane.margin>
+            </Text>
+            <Text fill="BLUE" strokeType="OUTSIDE" strokeWidth="0.0" text="String StartPoint" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets left="160.0" />
+               </GridPane.margin>
+            </Text>
+            <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="TO" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets left="280.0" />
+               </GridPane.margin>
+            </Label>
+            <Text fill="BLUE" strokeType="OUTSIDE" strokeWidth="0.0" text="String Destination" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets left="320.0" />
+               </GridPane.margin>
+            </Text>
+      </children>
+   </GridPane>
    </children>
-</GridPane>
 </VBox>
