--- a/src/main/resources/group16/smartflightcheckinkiosk/boardingpass-ticket.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/boardingpass-ticket.fxml
@@ -10,6 +10,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 
@@ -18,36 +20,52 @@
             fx:controller="group16.smartflightcheckinkiosk.Controller.BoardingpassTicketController"
             prefHeight="200.0" prefWidth="400.0">
     <children>
-        <FlowPane prefHeight="200.0" prefWidth="400.0">
+        <FlowPane prefHeight="150.0" prefWidth="400.0">
             <children>
-                <Pane prefHeight="200.0" prefWidth="400.0">
+                <Pane prefHeight="150.0" prefWidth="400.0">
+                    <AnchorPane layoutY="0.0" prefHeight="50.0" prefWidth="400.0" style="-fx-background-color: #87cefa;">
+                        <children>
+                            <Label fx:id="confirm4" layoutX="51.0" layoutY="13.0" prefHeight="22.0" prefWidth="195.0" text="Boaringpass-ticket">
+                                <font>
+                                    <Font name="Myanmar MN" size="13.0" />
+                                </font>
+                            </Label>
+                        </children>
+                    </AnchorPane>
                     <children>
-                        <Text fill="BLUE" layoutX="14.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Check-in-baggage Tag" underline="true" wrappingWidth="197.240234375">
-                            <font>
-                                <Font size="15.0" />
-                            </font>
-                        </Text>
+<!--                        <Text fill="BLUE" layoutX="14.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Check-in-baggage Tag" underline="true" wrappingWidth="197.240234375">-->
+<!--                            <font>-->
+<!--                                <Font size="15.0" />-->
+<!--                            </font>-->
+<!--                        </Text>-->
                         <Text layoutX="13.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="owner:" />
-                        <Label alignment="CENTER" layoutX="14.0" layoutY="153.0" opacity="0.3" prefHeight="25.0" prefWidth="173.0" rotate="10.0" text="have a nice journey!" textFill="BLUE">
-                            <font>
-                                <Font size="15.0" />
-                            </font>
-                            <padding>
-                                <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-                            </padding>
-                            <opaqueInsets>
-                                <Insets top="2.0" />
-                            </opaqueInsets>
-                        </Label>
+<!--                        <Label alignment="CENTER" layoutX="14.0" layoutY="153.0" opacity="0.3" prefHeight="25.0" prefWidth="173.0" rotate="10.0" text="have a nice journey!" textFill="BLUE">-->
+<!--                            <font>-->
+<!--                                <Font size="15.0" />-->
+<!--                            </font>-->
+<!--                            <padding>-->
+<!--                                <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />-->
+<!--                            </padding>-->
+<!--                            <opaqueInsets>-->
+<!--                                <Insets top="2.0" />-->
+<!--                            </opaqueInsets>-->
+<!--                        </Label>-->
                         <Text layoutX="13.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="flight no:" />
                         <Text fx:id="Surname" fill="BLUE" layoutX="82.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String Surname" />
                         <Text fx:id="FlightNumber" fill="BLUE" layoutX="82.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String FlightNumber" />
                         <Text layoutX="14.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="tag:" />
                         <Text fx:id="Tag" fill="BLUE" layoutX="57.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String Tag" />
+                        <Text layoutX="14.0" layoutY="146.0" strokeType="OUTSIDE" strokeWidth="0.0" text="counter:" />
+                        <Text fx:id="CounterNumber" fill="BLUE" layoutX="70.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String CounterNumber" />
                     </children>
                 </Pane>
             </children>
         </FlowPane>
+        <ImageView fitHeight="150.0" fitWidth="170.0" layoutX="230.0" layoutY="50.0">
+            <image>
+                <Image url="@img/tuoyun.png" />
+            </image>
+        </ImageView>
     </children>
 
 </AnchorPane>
