--- a/src/main/resources/group16/smartflightcheckinkiosk/SeatChoose.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/SeatChoose.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.SeatChooseController">
+<ScrollPane fx:id="SeatChoosePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.SeatChooseController">
     <content>
         <BorderPane prefHeight="791.0" prefWidth="585.0">
             <left>
@@ -25,12 +24,12 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <Button fx:id="A1" mnemonicParsing="false" text="Button" onAction="#ButtonClicked"  />
-                        <Button fx:id="B1" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" onAction="#ButtonClicked"/>
-                        <Button fx:id="A2" mnemonicParsing="false" text="Button" GridPane.rowIndex="1" onAction="#ButtonClicked" />
-                        <Button fx:id="B2" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="1" onAction="#ButtonClicked"/>
-                        <Button fx:id="A3" mnemonicParsing="false" text="Button" GridPane.rowIndex="2" onAction="#ButtonClicked" />
-                        <Button fx:id="B3" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" onAction="#ButtonClicked" GridPane.rowIndex="2">
+                        <Button fx:id="A1" mnemonicParsing="false" onAction="#ButtonClicked" text="Button" />
+                        <Button fx:id="B1" mnemonicParsing="false" onAction="#ButtonClicked" text="Button" GridPane.columnIndex="1" />
+                        <Button fx:id="A2" mnemonicParsing="false" onAction="#ButtonClicked" text="Button" GridPane.rowIndex="1" />
+                        <Button fx:id="B2" mnemonicParsing="false" onAction="#ButtonClicked" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Button fx:id="A3" mnemonicParsing="false" onAction="#ButtonClicked" text="Button" GridPane.rowIndex="2" />
+                        <Button fx:id="B3" mnemonicParsing="false" onAction="#ButtonClicked" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="2">
                             <GridPane.margin>
                                 <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
                             </GridPane.margin>
@@ -50,20 +49,19 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <Button fx:id="C1" mnemonicParsing="false" text="Button" onAction="#ButtonClicked"/>
-                        <Button fx:id="D1" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" onAction="#ButtonClicked"/>
-                        <Button fx:id="C2" mnemonicParsing="false" text="Button" GridPane.rowIndex="1" onAction="#ButtonClicked"/>
-                        <Button fx:id="D2" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="1" onAction="#ButtonClicked"/>
-                        <Button fx:id="C3" mnemonicParsing="false" text="Button" GridPane.rowIndex="2" onAction="#ButtonClicked"/>
-                        <Button fx:id="D3" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="2" onAction="#ButtonClicked"/>
+                        <Button fx:id="C1" mnemonicParsing="false" onAction="#ButtonClicked" text="Button" />
+                        <Button fx:id="D1" mnemonicParsing="false" onAction="#ButtonClicked" text="Button" GridPane.columnIndex="1" />
+                        <Button fx:id="C2" mnemonicParsing="false" onAction="#ButtonClicked" text="Button" GridPane.rowIndex="1" />
+                        <Button fx:id="D2" mnemonicParsing="false" onAction="#ButtonClicked" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Button fx:id="C3" mnemonicParsing="false" onAction="#ButtonClicked" text="Button" GridPane.rowIndex="2" />
+                        <Button fx:id="D3" mnemonicParsing="false" onAction="#ButtonClicked" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                     </children>
                 </GridPane>
             </right>
          <bottom>
             <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
               <buttons>
-                <Button fx:id="Back" mnemonicParsing="false" text="Back" />
-                  <Button fx:id="Next" mnemonicParsing="false" text="Next" onAction="#gotoMealChoose"/>
+                <Button fx:id="Back" onAction="#gotoMainMenu" mnemonicParsing="false" text="Back" />
               </buttons>
             </ButtonBar>
          </bottom>
