--- a/src/main/resources/group16/smartflightcheckinkiosk/BookedFlight.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/BookedFlight.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.BookedFlight">
+<GridPane fx:id="Flightpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.BookedFlightController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -19,6 +20,7 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <Label contentDisplay="CENTER" prefHeight="15.0" prefWidth="99.0" text="Booking Flight" GridPane.rowIndex="1" />
@@ -35,5 +37,6 @@
       <Label fx:id="DepatureTime1" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="7" />
       <Label fx:id="Surname1" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="3" />
       <Label fx:id="BookingNumber1" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Button mnemonicParsing="false" text="Back" onAction="#gotoMainMenu" GridPane.columnIndex="1" GridPane.rowIndex="8" />
    </children>
 </GridPane>
