--- a/src/main/resources/group16/smartflightcheckinkiosk/BookedFlight.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/BookedFlight.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="Flightpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.BookedFlightController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.BookedFlightController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -20,7 +19,6 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <Label contentDisplay="CENTER" prefHeight="15.0" prefWidth="99.0" text="Booking Flight" GridPane.rowIndex="1" />
@@ -30,13 +28,12 @@
       <Label contentDisplay="CENTER" text="depature time" GridPane.rowIndex="7" />
       <Label contentDisplay="CENTER" text="Surname" GridPane.rowIndex="3" />
       <Label contentDisplay="CENTER" text="Booking Number" GridPane.rowIndex="2" />
-      <Label fx:id="BookingFlight1" contentDisplay="CENTER" prefHeight="15.0" prefWidth="99.0" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <Label fx:id="ArrivingCity1" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      <Label fx:id="DepatureCity1" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <Label fx:id="ArrivingTime1" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-      <Label fx:id="DepatureTime1" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-      <Label fx:id="Surname1" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <Label fx:id="BookingNumber1" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Button mnemonicParsing="false" text="Back" onAction="#gotoMainMenu" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+      <Label fx:id="BookingFlight" contentDisplay="CENTER" prefHeight="15.0" prefWidth="99.0" text="666" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Label fx:id="ArrivingCity" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <Label fx:id="DepatureCity" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+      <Label fx:id="ArrivingTime" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+      <Label fx:id="DepatureTime" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+      <Label fx:id="Surname" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Label fx:id="BookingNumber" contentDisplay="CENTER" text="xxx" GridPane.columnIndex="1" GridPane.rowIndex="2" />
    </children>
 </GridPane>
