--- a/src/main/resources/group16/smartflightcheckinkiosk/FlightList.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/FlightList.fxml
@@ -1,38 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-<VBox fx:id="FlightList" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.FlightListController">
+<VBox fx:id="FlightList" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.FlightListController">
    <children>
       <AnchorPane prefHeight="600.0" prefWidth="400.0">
          <children>
             <Text layoutX="14.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Check-in Status" />
-            <Text layoutX="66.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String Name" />
-            <Text layoutX="228.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Gender" wrappingWidth="160.48046875" />
-            <Text layoutX="346.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String SeatNo" />
-            <Text layoutX="434.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Status" wrappingWidth="144.46875" />
-            <Text layoutX="66.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String Name" />
-            <Text layoutX="66.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String Name" />
-            <Text layoutX="66.0" layoutY="459.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String Name" />
-            <Text layoutX="228.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Gender" wrappingWidth="160.48046875" />
-            <Text layoutX="228.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Gender" wrappingWidth="160.48046875" />
-            <Text layoutX="228.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Gender" wrappingWidth="160.48046875" />
+            <Text fx:id="Namefield1" layoutX="66.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
+            <Text fx:id="Gender1" layoutX="228.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="160.48046875" />
+            <Text fx:id="Seatfield1" layoutX="346.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
+            <Text fx:id="Statusfield1" layoutX="434.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Status" wrappingWidth="144.46875" />
+            <Text fx:id="Namefield2" layoutX="66.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
+            <Text fx:id="Namefield3" layoutX="66.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
+            <Text fx:id="Namefield4" layoutX="66.0" layoutY="459.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
+            <Text fx:id="Gender2" layoutX="228.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="160.48046875" />
+            <Text fx:id="Gender3" layoutX="228.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="160.48046875" />
+            <Text fx:id="Gender4" layoutX="228.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="160.48046875" />
             <Text layoutX="63.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:" />
             <Text layoutX="210.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gender:" />
             <Text layoutX="326.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SeatNo:" />
             <Text layoutX="450.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Status:" />
-            <Text layoutX="346.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String SeatNo" />
-            <Text layoutX="346.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String SeatNo" />
-            <Text layoutX="346.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String SeatNo" />
-            <Text layoutX="434.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Status" wrappingWidth="144.46875" />
-            <Text layoutX="434.0" layoutY="378.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Status" wrappingWidth="144.46875" />
-            <Text layoutX="434.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Status" wrappingWidth="144.46875" />
+            <Text fx:id="Seatfield2" layoutX="346.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
+            <Text fx:id="Seatfield3" layoutX="346.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
+            <Text fx:id="Seatfield4" layoutX="346.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
+            <Text fx:id="Statusfield2" layoutX="434.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="144.46875" />
+            <Text fx:id="Statusfield3" layoutX="434.0" layoutY="378.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="144.46875" />
+            <Text fx:id="Statusfield4" layoutX="434.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="144.46875" />
          <Button fx:id="b7" layoutX="227.0" layoutY="585.0" mnemonicParsing="false" onAction="#gotoCheckFlight" text="Go back">
       </Button>
          </children>
